--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -29,6 +29,7 @@ defaults:
     shell: bash
 
 jobs:
+  
   compile:
     name: Parse Resumes
     runs-on: ubuntu-latest
@@ -38,12 +39,13 @@ jobs:
       - name: Run the build process with Docker
         uses: addnab/docker-run-action@v3
         with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
             image: yamlresume/yamlresume-base:latest
-            options: -v ${{ github.workspace }}/yamlresume:/home/yamlresume build resume.yml
+            options: --rm -v ${{ github.workspace }}/yamlresume:/home/yamlresume
             run: |
-                composer install
-                npm install
-                npm run production
+                yamlresume build resume.yml
+
       - name: File system actions
         run: |
           ls "${GITHUB_WORKSPACE}"
