--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -40,11 +40,11 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
             username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
+            password: ${{ secrets.DOCKER_PAT }}
             image: yamlresume/yamlresume-base:latest
             options: --rm -v ${{ github.workspace }}/yamlresume:/home/yamlresume
             run: |
-                yamlresume build resume.yml
+                build resume.yml
 
       - name: File system actions
         run: |
