--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -37,14 +37,8 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
         
-      - name: Run the build process with Docker
-        uses: addnab/docker-run-action@v3
-        with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PAT }}
-            image: yamlresume/yamlresume:latest
-            shell: /usr/bin/sh
-            options: --rm -v ${{ github.workspace }}/yamlresume:/home/yamlresume yamlresume/yamlresume build resume.yml            
+      - name: Run image
+        run: docker run -v ${{ github.workspace }}/yamlresume:/home/yamlresume yamlresume/yamlresume build resume.yml            
 
       - name: File system actions
         run: |
