--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -38,6 +38,8 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Run image
+        permissions:
+          contents: write
         run: docker run -v ${{ github.workspace }}/yamlresume:/home/yamlresume yamlresume/yamlresume build resume.yml            
 
       - name: File system actions
