--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Run image
-        run: docker run -v ${{ github.workspace }}/yamlresume:/home/yamlresume yamlresume/yamlresume build resume.yml            
+        run: docker run -v ${{ github.workspace }}:/home/yamlresume yamlresume/yamlresume build resume.yml            
 
       - name: File system actions
         run: |
