--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -11,7 +11,11 @@ on:
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions: write-all
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
@@ -34,7 +38,8 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Run image
-        run: docker run -v ${{ github.workspace }}:/home/yamlresume yamlresume/yamlresume build resume.yml            
+        run: docker run -v ${{ github.workspace }}:/home/yamlresume yamlresume/yamlresume build yamlresume/resume.yml            
+        
 
       - name: File system actions
         run: |
