--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Run image
-        run: docker run -v ${{ github.workspace }}/mnt:/home/yamlresume yamlresume/yamlresume build ${{ github.workspace }}/mnt/resume.yml            
+        run: docker run -v ${{ github.workspace }}/mnt:/home/yamlresume yamlresume/yamlresume build resume.yml            
         
 
       - name: File system actions
