--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -36,14 +36,25 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+
+      - name: Stage Resume File
+        run: |
+          cp "${{ github.workspace }}/assets/yml/resume.yml" "${{ github.workspace }}/mnt"
         
       - name: Run image
-        run: docker run -u root -v ${{ github.workspace }}/mnt:/home/yamlresume yamlresume/yamlresume build resume.yml            
-        
+        run: docker run -u root -v ${{ github.workspace }}/mnt:/home/yamlresume yamlresume/yamlresume build resume.yml
+
+      - name: Pull PDF to Artifacts Folder
+        run: |
+          mv "${{ github.workspace }}/mnt/resume.pdf" "${{ github.workspace }}/content/resume/artifacts"
 
       - name: File system actions
         run: |
-          ls "${GITHUB_WORKSPACE}"
+          ls "${{ github.workspace }}/mnt"
+
+          ls "${{ github.workspace }}/assets/yml"
+
+          ls "${{ github.workspace }}/content/resume/artifacts"
 
   # Build job
   build:
