--- a/assets/yml/resume.yml
+++ b/assets/yml/resume.yml
@@ -2,10 +2,10 @@
 ---
 content:
   basics: 
-    name: Andy Dufresne
+    name: Andonaldo Dufresne
     headline: Headed for the Pacific
-    phone: "(213) 555-9876"
-    email: hi@ppresume.com
+    phone: "(214) 555-9876"
+    email: henlo@ppresume.com
     url: https://ppresume.com/gallery
     # All summary fields supports a limited rich text capabilities in markdown
     # syntax:
