--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -31,33 +31,24 @@ defaults:
 jobs:
   
   compile:
-    name: Parse Resumes
+    name: Build Resume
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
 
       - name: Stage Resume File
-        run: |
-          cp "${{ github.workspace }}/assets/yml/resume.yml" "${{ github.workspace }}/mnt"
+        run: cp "${{ github.workspace }}/assets/yml/resume.yml" "${{ github.workspace }}/mnt"
         
-      - name: Run image
+      - name: Build Resume w Docker Image
         run: docker run -u root -v ${{ github.workspace }}/mnt:/home/yamlresume yamlresume/yamlresume build resume.yml
 
       - name: Pull PDF to Artifacts Folder
-        run: |
-          mv "${{ github.workspace }}/mnt/resume.pdf" "${{ github.workspace }}/content/resume/artifacts"
-
-      - name: File system actions
-        run: |
-          ls "${{ github.workspace }}/mnt"
-
-          ls "${{ github.workspace }}/assets/yml"
-
-          ls "${{ github.workspace }}/content/resume/artifacts"
+        run: mv "${{ github.workspace }}/mnt/resume.pdf" "${{ github.workspace }}/content/resume/artifacts"
 
   # Build job
   build:
+    name: Build Site
     needs: compile
     runs-on: ubuntu-latest
     env:
@@ -118,6 +109,7 @@ jobs:
 
   # Deployment job
   deploy:
+    name: Deploy Site
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
