--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -38,13 +38,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Stage Resume File
-        run: cp "${{ github.workspace }}/assets/yml/resume.yml" "${{ github.workspace }}/mnt"
+        run: cp ${{ github.workspace }}/assets/yml/resume.yml ${{ github.workspace }}/mnt
         
       - name: Build Resume w Docker Image
         run: docker run -u root -v ${{ github.workspace }}/mnt:/home/yamlresume yamlresume/yamlresume build resume.yml
 
       - name: Pull PDF to Artifacts Folder
-        run: mv "${{ github.workspace }}/mnt/resume.pdf" "${{ github.workspace }}/content/resume/artifacts"
+        run: mv ${{ github.workspace }}/mnt/resume.pdf ${{ github.workspace }}/content/resume/artifacts
 
   # Build job
   build:
