--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -44,6 +44,12 @@ jobs:
       - name: Run image
         run: docker run -u root -v ${{ github.workspace }}/mnt:/home/yamlresume yamlresume/yamlresume build resume.yml
 
+  organize:
+    name: Prep Build
+    needs: compile
+    runs-on: ubuntu-latest
+    steps:
+
       - name: Pull PDF to Artifacts Folder
         run: mv "${{ github.workspace }}/mnt/resume.pdf" "${{ github.workspace }}/content/resume/artifacts"
 
@@ -53,7 +59,7 @@ jobs:
   # Build job
   build:
     name: Build Site
-    needs: compile
+    needs: organize
     runs-on: ubuntu-latest
     env:
       DART_SASS_VERSION: 1.89.2
