--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -44,14 +44,13 @@ jobs:
       - name: Run image
         run: docker run -u root -v ${{ github.workspace }}/mnt:/home/yamlresume yamlresume/yamlresume build resume.yml
 
-      - name: LS Mnt
-        run: ls "/home/"
+      - name: LS ws
+        run: |
+          echo ${{ github.workspace}} 
+          ls ${{ github.workspace }}
 
       - name: Pull PDF to Artifacts Folder
         run: mv "${{ github.workspace }}/mnt/resume.pdf" "${{ github.workspace }}/assets/pdf"
-
-      - name: LS Static
-        run: ls "${{ github.workspace }}/assets/pdf"
 
   # Build job
   build:
