--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -29,28 +29,6 @@ defaults:
     shell: bash
 
 jobs:
-  
-  compile:
-    name: Build Resume
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Stage Resume File
-        run: mv "${{ github.workspace }}/assets/yml/resume.yml" "${{ github.workspace }}/mnt"
-        
-      - name: Run image
-        run: docker run -u root -v ${{ github.workspace }}/mnt:/home/yamlresume yamlresume/yamlresume build resume.yml
-
-      - name: LS ws
-        run: |
-          echo ${{ github.workspace}} 
-          ls ${{ github.workspace }}
-
-      - name: Pull PDF to Artifacts Folder
-        run: mv "${{ github.workspace }}/mnt/resume.pdf" "${{ github.workspace }}/assets/pdf"
 
   # Build job
   build:
@@ -67,22 +45,39 @@ jobs:
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb
           sudo dpkg -i ${{ runner.temp }}/hugo.deb
+
       - name: Install Dart Sass
         run: |
           wget -O ${{ runner.temp }}/dart-sass.tar.gz https://github.com/sass/dart-sass/releases/download/${DART_SASS_VERSION}/dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz
           tar -xf ${{ runner.temp }}/dart-sass.tar.gz --directory ${{ runner.temp }}
           mv ${{ runner.temp }}/dart-sass/ /usr/local/bin
           echo "/usr/local/bin/dart-sass" >> $GITHUB_PATH
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
           submodules: recursive
           fetch-depth: 0
+
+      - name: Look Around
+        run: ls ${{ github.workspace }}
+
+      - name: Stage Resume File
+        run: mv "${{ github.workspace }}/assets/yml/resume.yml" "${{ github.workspace }}/mnt"
+        
+      - name: Run image
+        run: docker run -u root -v ${{ github.workspace }}/mnt:/home/yamlresume yamlresume/yamlresume build resume.yml
+      
+      - name: Pull PDF to Artifacts Folder
+        run: mv "${{ github.workspace }}/mnt/resume.pdf" "${{ github.workspace }}/assets/pdf"
+
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+      
       - name: Cache Restore
         id: cache-restore
         uses: actions/cache/restore@v4
@@ -92,8 +87,10 @@ jobs:
           key: hugo-${{ github.run_id }}
           restore-keys:
             hugo-
+
       - name: Configure Git
         run: git config core.quotepath false
+
       - name: Build with Hugo
         run: |
           hugo \
