--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -67,8 +67,8 @@ jobs:
       - name: Run image
         run: docker run -u root -v ${{ github.workspace }}/mnt:/home/yamlresume yamlresume/yamlresume build resume.yml
       
-      - name: Pull PDF to Artifacts Folder
-        run: mv "${{ github.workspace }}/mnt/resume.pdf" "${{ github.workspace }}/assets/pdf"
+      - name: Pull PDF to Leaf Folder
+        run: mv "${{ github.workspace }}/mnt/resume.pdf" "${{ github.workspace }}/content/resume"
 
       - name: Setup Pages
         id: pages
