cp instead of move to preserve site structure

--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -62,7 +62,7 @@ jobs:
         run: ls ${{ github.workspace }}
 
       - name: Stage Resume File
-        run: mv "${{ github.workspace }}/assets/yml/resume.yml" "${{ github.workspace }}/mnt"
+        run: cp "${{ github.workspace }}/assets/yml/resume.yml" "${{ github.workspace }}/mnt"
         
       - name: Run image
         run: docker run -u root -v ${{ github.workspace }}/mnt:/home/yamlresume yamlresume/yamlresume build resume.yml
