--- a/assets/yml/aleckmann-resume.yml
+++ b/assets/yml/aleckmann-resume.yml
@@ -17,22 +17,22 @@ content:
       - Pixel perfect full stack web developer, specialised in creating high-quality, visually appealing websites
       - Experiened in databases (SQL, NoSQL), familiar with server-side technologies (Node.js, Express, etc.)
       - Team player, with detail-oriented mindset and a keen eye for design and user experiences
-  #location:
-  #  address: 123 Main Street
-  #  city: Sacramento
-  #  region: California
-  #  country: United States
-  #  postalCode: "95814"
+  # location:
+  #   address: 123 Main Street
+  #   city: Sacramento
+  #   region: California
+  #   country: United States
+  #   postalCode: "95814"
   profiles:
-    - network: github
+    - network: GitHub
       url: https://github.com/aleckmann
       username: aleckmann
-    - network: linkedin
+    - network: LinkedIn
       url: https://www.linkedin.com/in/aleckmann/
       username: aleckmann
   education:
-    - institution: University of Southern California
-      url: https://www.cs.usc.edu/
+    - institution: New York University
+      url: https://www.nyu.edu
       # Valid degree options:
       #
       # - 'Middle School'
@@ -43,8 +43,8 @@ content:
       # - 'Master'
       # - 'Doctor'
       degree: Bachelor
-      area: Computer Engineering and Computer Science
-      score: "3.8"
+      area: Computer Science
+      score: "3.0"
       # Should be a valid date string that can be parsed by `new Date(dateStr)`
       # in JavaScript, eg. '2020-01', '2020-02-03', 'Jul 1, 2023' etc.
       #
@@ -52,22 +52,9 @@ content:
       # people won't really care about the exact date for your working
       # experience or education background, etc.
       # ref: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/Date
-      startDate: 01 Sep 2016
+      startDate: 01 Sep 2012
       # Leave endDate blank to indicate "Present"
-      endDate: 01 Jul 2020
-      courses:
-        - Discrete Methods in Computer Science
-        - Programming Language Concepts
-        - Data Structures and Object-Oriented Design
-        - Operating Systems
-        - Computer Architecture
-        - Database Systems
-        - Computer Networking
-        - Introduction to the Theory of Computing
-      summary: |
-        - Developed proficiency in programming languages such as Java, C++, and Python
-        - Gained hands-on experience in software development through various projects and assignments
-        - Strong communication and teamwork skills acquired through group projects and presentations
+      endDate: 01 May 2017
   work:
     - name: PPResume
       url: https://ppresume.com
@@ -146,36 +133,8 @@ content:
         - Sketch
         - Figma
         - Photoshop
-  awards:
-    - title: Dean's List
-      awarder: University of Southern California
-      date: Oct 2016
-      summary: |
-        Awarded to students who achieve a high academic standing by maintaining a specified grade point average (GPA) during a semester.
-  certificates:
-    - name: AWS Certified Developer - Associate
-      url: https://aws.amazon.com/certification/
-      issuer: AWS
-      date: Mar 2021
-  publications:
-    - publisher: ACM Transactions on Interactive Intelligent Systems
-      url: https://dl.acm.org/journal/tiis
-      name: Enhancing Human-Computer Interaction through Augmented Reality
-      releaseDate: Dec 2017
-      summary: |
-        - Explores the potential of augmented reality (AR) in improving interaction between humans and computers
-        - Highlights benefits of AR in various areas such as gaming, education, healthcare, and design
-        - Discusses challenges and future directions of AR technology in enhancing user experience
-  references:
-    - name: Dr. Amanda Reynolds
-      phone: "(555) 123-4567"
-      relationship: Computer Science Professor
-      email: amanda.reynolds@usc.edu
-      summary: |
-        Andy Dufresne shows exceptional problem-solving skills and a solid understanding of programming concepts, he would bring immense value to any team or organization he becomes a part of.
   projects:
-    - name: EduWeb
-      url: https://www.eduweb.xyz/
+    - name: Geofencing Form
       description: A web-based educational platform for interactive learning
       startDate: Sep 2016
       endDate: Dec 2016
@@ -188,28 +147,56 @@ content:
         - Education
         - Online Learning
         - HCI
-  interests:
-    - name: Sports
-      keywords:
-        - Soccer
-        - Swimming
-        - Bicycling
-        - Hiking
-    - name: Music
-      keywords:
-        - Piano
-        - Guitar
-  volunteer:
-    - organization: USC Computer Science and Engineering Society
-      url: https://www.usccsesociety.org/
-      position: Tech Mentor
-      startDate: Sep 2015
-      endDate: Jul 2023
-      summary: |
-        - Volunteered as a Tech Mentor at USC Computer Science and Engineering Society
-        - Provided guidance and assistance to fellow students in their technical projects and coursework
-        - Assisted in organizing workshops, coding competitions, and networking events for the society members
-        - Contributed to fostering a collaborative and supportive environment within the student community
+
+  # awards:
+  #   - title: Dean's List
+  #     awarder: University of Southern California
+  #     date: Oct 2016
+  #     summary: |
+  #       Awarded to students who achieve a high academic standing by maintaining a specified grade point average (GPA) during a semester.
+  # certificates:
+  #   - name: AWS Certified Developer - Associate
+  #     url: https://aws.amazon.com/certification/
+  #     issuer: AWS
+  #     date: Mar 2021
+  # publications:
+  #   - publisher: ACM Transactions on Interactive Intelligent Systems
+  #     url: https://dl.acm.org/journal/tiis
+  #     name: Enhancing Human-Computer Interaction through Augmented Reality
+  #     releaseDate: Dec 2017
+  #     summary: |
+  #       - Explores the potential of augmented reality (AR) in improving interaction between humans and computers
+  #       - Highlights benefits of AR in various areas such as gaming, education, healthcare, and design
+  #       - Discusses challenges and future directions of AR technology in enhancing user experience
+  # references:
+  #   - name: Dr. Amanda Reynolds
+  #     phone: "(555) 123-4567"
+  #     relationship: Computer Science Professor
+  #     email: amanda.reynolds@usc.edu
+  #     summary: |
+  #       Andy Dufresne shows exceptional problem-solving skills and a solid understanding of programming concepts, he would bring immense value to any team or organization he becomes a part of.
+  # interests:
+  #   - name: Sports
+  #     keywords:
+  #       - Soccer
+  #       - Swimming
+  #       - Bicycling
+  #       - Hiking
+  #   - name: Music
+  #     keywords:
+  #       - Piano
+  #       - Guitar
+  # volunteer:
+  #   - organization: USC Computer Science and Engineering Society
+  #     url: https://www.usccsesociety.org/
+  #     position: Tech Mentor
+  #     startDate: Sep 2015
+  #     endDate: Jul 2023
+  #     summary: |
+  #       - Volunteered as a Tech Mentor at USC Computer Science and Engineering Society
+  #       - Provided guidance and assistance to fellow students in their technical projects and coursework
+  #       - Assisted in organizing workshops, coding competitions, and networking events for the society members
+  #       - Contributed to fostering a collaborative and supportive environment within the student community
 
 layout:
   locale:
@@ -233,16 +220,10 @@ layout:
       education: "Academic Background"
       skills: "Technical Skills"
       languages: "Spoken Languages"
-      awards: "Accolades"
-      certificates: "Certificates"
-      projects: "Projects"
-      volunteer: "Volunteer"
+      projects: "Project Highlights"
     order:
       - work
+      - projects
       - education
       - skills
       - languages
-      - awards
-      - certificates
-      - projects
-      - volunteer
